yarn add multibase@4.0.4

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "multibase": "4.0.4",
     "react": "17.0.1",
     "react-native": "0.64.2"
   },
